--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -50,6 +50,64 @@
     <!--- Sidemenu -->
     <div id="sidebar-menu">
       <ul id="side-menu">
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="archive"></i>
+            <span> 기업정보 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'pages:company-info' %}">
+            <i data-feather="briefcase"></i>
+            <span> 기업정보 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="trending-up"></i>
+            <span> 주가분석 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="bar-chart-2"></i>
+            <span> 주가분석 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="activity"></i>
+            <span> 뉴스/댓글분석 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="users"></i>
+            <span> 소셜분석 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="thumbs-up"></i>
+            <span> 소셜분석 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{% url 'apps:calendar' %}">
+            <i data-feather="link"></i>
+            <span> 채시보 </span>
+          </a>
+        </li>
+
+        <hr/>
+
         <li class="menu-title">Navigation</li>
 
         <li>
