--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -79,7 +79,7 @@
         </li>
 
         <li>
-          <a href="{% url 'apps:calendar' %}">
+          <a href="http://bigbuzz.bigtanews.co.kr:24580/artlist.php" target="_blank">
             <i data-feather="link"></i>
             <span> 채시보 </span>
           </a>
