--- a/ubold/templates/vertical_base.html
+++ b/ubold/templates/vertical_base.html
@@ -54,9 +54,9 @@ class="loading" data-layout='{"mode": "light", "width": "fluid", "menuPosition":
 </div>
 <!-- END wrapper -->
 
-{% block right_sidebar %}
-{% include 'partials/right-sidebar.html' %}
-{% endblock %}
+{#{% block right_sidebar %}#}
+{#{% include 'partials/right-sidebar.html' %}#}
+{#{% endblock %}#}
 
 {% endblock %}
 
