--- a/ubold/templates/partials/footer.html
+++ b/ubold/templates/partials/footer.html
@@ -8,7 +8,7 @@
             <div class="col-md-6">
               <div class="col">
                 <div class="col-md-6">
-                  <script>document.write(new Date().getFullYear())</script> (주) 카이모바일
+                  <script>document.write(new Date().getFullYear())</script> POWERED BY (주) 카이모바일
                 </div>
                 <div class="col-md-6">
                   <script>document.write(new Date().getFullYear())</script>
