--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -58,7 +58,7 @@
         </li>
 
         <li>
-          <a href="{% url 'apps:calendar' %}">
+          <a href="{% url 'pages:price-analysis' %}">
             <i data-feather="trending-up"></i>
             <span> 주가분석 </span>
           </a>
