로고 및 푸터 변경

--- a/ubold/templates/pages/company-info.html
+++ b/ubold/templates/pages/company-info.html
@@ -132,7 +132,7 @@
 
           <table
             id="scroll-vertical-datatable"
-            class="table dt-responsive nowrap w-100"
+            class="table dt-responsive nowrap w-100 overflow-scroll"
           >
             <thead>
               <tr>
