--- a/ubold/templates/partials/topbar.html
+++ b/ubold/templates/partials/topbar.html
@@ -454,22 +454,22 @@
     <!-- LOGO -->
     <div class="logo-box">
       <a href="{% url 'dashboard:index' %}" class="logo logo-dark text-center">
-        <span class="logo-sm">
-          <img src="{% static 'images/logo-sm.png' %}" alt="" height="22" />
+{#        <span class="logo-sm">#}
+{#          <img src="{% static 'images/logo-sm.png' %}" alt="" height="22" />#}
           <!-- <span class="logo-lg-text-light">UBold</span> -->
-        </span>
+{#        </span>#}
         <span class="logo-lg">
-          <img src="{% static 'images/logo-dark.png' %}" alt="" height="20" />
+          <img src="{% static 'images/bbdlab_logo.png' %}" alt="" height="55" />
           <!-- <span class="logo-lg-text-light">U</span> -->
         </span>
       </a>
 
       <a href="{% url 'dashboard:index' %}" class="logo logo-light text-center">
-        <span class="logo-sm">
-          <img src="{% static 'images/logo-sm.png' %}" alt="" height="22" />
-        </span>
+{#        <span class="logo-sm">#}
+{#          <img src="{% static 'images/logo-sm.png' %}" alt="" height="22" />#}
+{#        </span>#}
         <span class="logo-lg">
-          <img src="{% static 'images/logo-light.png' %}" alt="" height="20" />
+          <img src="{% static 'images/bbdlab_logo.png' %}" alt="" height="55" />
         </span>
       </a>
     </div>
