--- a/ubold/templates/partials/left-sidebar.html
+++ b/ubold/templates/partials/left-sidebar.html
@@ -79,6 +79,121 @@
         </li>
 
         <li>
+          <a href="#sidebarMultilevel" data-bs-toggle="collapse">
+            <i data-feather="share-2"></i>
+            <span> 소셜 분석 </span>
+            <span class="menu-arrow"></span>
+          </a>
+          <div class="collapse" id="sidebarMultilevel">
+            <ul class="nav-second-level">
+              <li>
+                <a href="#financial-multilevel" data-bs-toggle="collapse">
+                  금융 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="financial-multilevel">
+                  <ul class="nav-second-level">
+                    <li> <a href="/pages/socialanalysis/financial/city_bank">시중 은행</a> </li>
+                    <li> <a href="/pages/socialanalysis/financial/local_bank">지방 은행</a> </li>
+                    <li> <a href="/pages/socialanalysis/financial/non_face_to_face_bank">비대면 은행</a> </li>
+                    <li> <a href="/pages/socialanalysis/financial/stock">증권</a> </li>
+                    <li> <a href="/pages/socialanalysis/financial/insurance">보험</a></li>
+                    <li> <a href="/pages/socialanalysis/financial/card">카드</a></li>
+                    <li> <a href="/pages/socialanalysis/financial/capital">캐피탈</a></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <a href="#circulation-multilevel" data-bs-toggle="collapse">
+                  유통 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="circulation-multilevel">
+                  <ul class="nav-second-level">
+                    <li> <a href="/pages/socialanalysis/circulation/mart">백화점/마트</a> </li>
+                    <li> <a href="/pages/socialanalysis/circulation/convenience">편의점</a> </li>
+                    <li> <a href="/pages/socialanalysis/circulation/ecommerce">e커머스</a></li>
+                    <li> <a href="/pages/socialanalysis/circulation/parcel">택배</a></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <a href="#car-multilevel" data-bs-toggle="collapse">
+                  자동차 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="car-multilevel">
+                  <ul class="nav-second-level">
+                    <li> <a href="/pages/socialanalysis/car/company">회사명</a> </li>
+                    <li> <a href="/pages/socialanalysis/car/car">승용차</a> </li>
+                    <li> <a href="/pages/socialanalysis/car/suv">SUV</a></li>
+                    <li> <a href="/pages/socialanalysis/car/imported">수입차</a></li>
+                    <li> <a href="/pages/socialanalysis/car/electric">전기차</a></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <a href="#food-beverage-multilevel" data-bs-toggle="collapse">
+                  식음료 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="#food-beverage-multilevel">
+                  <ul class="nav-second-level">
+                    <li> <a href="/pages/socialanalysis/food-beverage/company">회사명</a> </li>
+                    <li> <a href="/pages/socialanalysis/food-beverage/ramen">라면</a> </li>
+                    <li> <a href="/pages/socialanalysis/food-beverage/rice">밥</a></li>
+                    <li> <a href="/pages/socialanalysis/food-beverage/alcohol">주류</a></li>
+                    <li> <a href="/pages/socialanalysis/food-beverage/franchise">프렌차이즈</a></li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <a href="#group-company-multilevel" data-bs-toggle="collapse">
+                  그룹사 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="group-company-multilevel">
+                  <ul class="nav-second-level">
+                    <li> <a href="javascript: void(0);"></a> </li>
+                    <li> <a href="javascript: void(0);"></a> </li>
+                    <li> <a href="javascript: void(0);"></a></li>
+                    <li> <a href="javascript: void(0);"></a></li>
+                    <li> <a href="javascript: void(0);"></a></li>
+                  </ul>
+                </div>
+              </li>
+
+              {% comment %}<li>
+                <a href="#sidebarMultilevel3" data-bs-toggle="collapse">
+                  유통 <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="sidebarMultilevel3">
+                  <ul class="nav-second-level">
+                    <li>
+                      <a href="javascript: void(0);">백화점/마트</a>
+                    </li>
+                    <li>
+                      <a href="#sidebarMultilevel4" data-bs-toggle="collapse">
+                        편의점 <span class="menu-arrow"></span>
+                      </a>
+                      <div class="collapse" id="sidebarMultilevel4">
+                        <ul class="nav-second-level">
+                          <li>
+                            <a href="javascript: void(0);">Item 1</a>
+                          </li>
+                          <li>
+                            <a href="javascript: void(0);">Item 2</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>{% endcomment %}
+            </ul>
+          </div>
+        </li>
+
+        <li>
           <a href="http://bigbuzz.bigtanews.co.kr:24580/artlist.php" target="_blank">
             <i data-feather="link"></i>
             <span> 채시보 </span>
@@ -776,60 +891,60 @@
           </div>
         </li>
 
-        <li>
-          <a href="#sidebarMultilevel" data-bs-toggle="collapse">
-            <i data-feather="share-2"></i>
-            <span> Multi Level </span>
-            <span class="menu-arrow"></span>
-          </a>
-          <div class="collapse" id="sidebarMultilevel">
-            <ul class="nav-second-level">
-              <li>
-                <a href="#sidebarMultilevel2" data-bs-toggle="collapse">
-                  Second Level <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="sidebarMultilevel2">
-                  <ul class="nav-second-level">
-                    <li>
-                      <a href="javascript: void(0);">Item 1</a>
-                    </li>
-                    <li>
-                      <a href="javascript: void(0);">Item 2</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-
-              <li>
-                <a href="#sidebarMultilevel3" data-bs-toggle="collapse">
-                  Third Level <span class="menu-arrow"></span>
-                </a>
-                <div class="collapse" id="sidebarMultilevel3">
-                  <ul class="nav-second-level">
-                    <li>
-                      <a href="javascript: void(0);">Item 1</a>
-                    </li>
-                    <li>
-                      <a href="#sidebarMultilevel4" data-bs-toggle="collapse">
-                        Item 2 <span class="menu-arrow"></span>
-                      </a>
-                      <div class="collapse" id="sidebarMultilevel4">
-                        <ul class="nav-second-level">
-                          <li>
-                            <a href="javascript: void(0);">Item 1</a>
-                          </li>
-                          <li>
-                            <a href="javascript: void(0);">Item 2</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </li>
+{#        <li>#}
+{#          <a href="#sidebarMultilevel" data-bs-toggle="collapse">#}
+{#            <i data-feather="share-2"></i>#}
+{#            <span> Multi Level </span>#}
+{#            <span class="menu-arrow"></span>#}
+{#          </a>#}
+{#          <div class="collapse" id="sidebarMultilevel">#}
+{#            <ul class="nav-second-level">#}
+{#              <li>#}
+{#                <a href="#sidebarMultilevel2" data-bs-toggle="collapse">#}
+{#                  Second Level <span class="menu-arrow"></span>#}
+{#                </a>#}
+{#                <div class="collapse" id="sidebarMultilevel2">#}
+{#                  <ul class="nav-second-level">#}
+{#                    <li>#}
+{#                      <a href="javascript: void(0);">Item 1</a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                      <a href="javascript: void(0);">Item 2</a>#}
+{#                    </li>#}
+{#                  </ul>#}
+{#                </div>#}
+{#              </li>#}
+{##}
+{#              <li>#}
+{#                <a href="#sidebarMultilevel3" data-bs-toggle="collapse">#}
+{#                  Third Level <span class="menu-arrow"></span>#}
+{#                </a>#}
+{#                <div class="collapse" id="sidebarMultilevel3">#}
+{#                  <ul class="nav-second-level">#}
+{#                    <li>#}
+{#                      <a href="javascript: void(0);">Item 1</a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                      <a href="#sidebarMultilevel4" data-bs-toggle="collapse">#}
+{#                        Item 2 <span class="menu-arrow"></span>#}
+{#                      </a>#}
+{#                      <div class="collapse" id="sidebarMultilevel4">#}
+{#                        <ul class="nav-second-level">#}
+{#                          <li>#}
+{#                            <a href="javascript: void(0);">Item 1</a>#}
+{#                          </li>#}
+{#                          <li>#}
+{#                            <a href="javascript: void(0);">Item 2</a>#}
+{#                          </li>#}
+{#                        </ul>#}
+{#                      </div>#}
+{#                    </li>#}
+{#                  </ul>#}
+{#                </div>#}
+{#              </li>#}
+{#            </ul>#}
+{#          </div>#}
+{#        </li>#}
       </ul>
     </div>
     <!-- End Sidebar -->
